Update to JS engine 1.2.1